--- a/index.html
+++ b/index.html
@@ -11,6 +11,65 @@
 <body>
   <div id="containerReact"></div>
   <script type="text/babel">
+    function isNumberRepeated(array, number){
+      let count = 0;
+      for(let i=0; i<array.length; i++){
+        for (let j=i+1; j<array.length; j++){
+          if (array[i] == array[j]){
+            count++;
+            if (count > 1){
+              return true;
+            }
+          }
+        }
+        
+      }
+      return false;
+    }
+
+    function indexOf(array, elem){
+      for(let i=0; i<array.length; i++){
+        let index = -1;
+        if (array[i] == elem){
+          index = i;
+          break;
+        }
+      }
+      return index;
+    }
+
+    function verifyLine(arrayLine){
+      let index = 0;
+      for (let i=1; i<=9; i++){
+        if (arrayLine[i] != null){ //or != '.'
+          if (indexOf(arrayLine[index], i) == -1){ //verify if this Line contains all numbers from 1 to 9
+            return false;
+          }
+          if (isNumberRepeated(arrayLine, i)){ //verify if this Line contains a repeated number
+            return false;
+          }
+        }
+        index++;
+      }
+      return true;
+    }
+
+    function verifyColumn(matrix, indexOfColumn){
+      let line = 0;
+      for (let i=1; i<=9; i++){
+        if (matrix[line][indexOfColumn] != null){
+          if (indexOf(matrix[line][indexOfColumn], i) == -1){
+            return false;
+          }
+          if (isNumberRepeated(matrix[line][indexOfColumn]), i);{
+            return false;
+          }
+        }
+        line++;
+      }
+      return true;
+    }
+
     function Container(props){
       return(
         <React.Fragment>
