--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
       let line = 0;
       for (let i=1; i<=9; i++){
         if (matrix[line][indexOfColumn] != null){
-          if (indexOf(matrix[line][indexOfColumn], i) == -1){
+          if (indexOf(matrix[line][indexOfColumn], i) == -1){ //verify if this Column contains all numbers from 1 to 9
             return false;
           }
-          if (isNumberRepeated(matrix[line][indexOfColumn]), i);{
+          if (isNumberRepeated(matrix[line][indexOfColumn]), i);{ //verify if this Column contains a repeated number
             return false;
           }
         }
@@ -69,6 +69,90 @@
       }
       return true;
     }
+
+    function verifyQuadrant(matrix, indexOfQuadrant){ // transform a quadrant (0 - 8) into an array, then, it uses the verifyLine function
+      let arrayQuadrant = [];
+      var startI = 0;
+      var startJ = 0;
+      var endI = 0;
+      var endJ = 0;
+
+      if (indexOfQuadrant <= 0){
+        var startI = 0;
+        var startJ = 0;
+        var endI = 2;
+        var endJ = 2;
+      }
+
+      if (indexOfQuadrant == 1){
+        var startI = 0;
+        var startJ = 3;
+        var endI = 2;
+        var endJ = 5;
+      }
+
+      if (indexOfQuadrant == 2){
+        var startI = 0;
+        var startJ = 6;
+        var endI = 2;
+        var endJ = 8;
+      }
+
+      if (indexOfQuadrant == 3){
+        var startI = 3;
+        var startJ = 0;
+        var endI = 5;
+        var endJ = 2;
+      }
+     
+      if (indexOfQuadrant == 4){
+        var startI = 3;
+        var startJ = 3;
+        var endI = 5;
+        var endJ = 5;
+      }
+
+      if (indexOfQuadrant == 5){
+        var startI = 3;
+        var startJ = 6;
+        var endI = 5;
+        var endJ = 8;
+      }
+
+      if (indexOfQuadrant == 6){
+        var startI = 6;
+        var startJ = 0;
+        var endI = 8;
+        var endJ = 2;
+      }
+
+      if (indexOfQuadrant == 7){
+        var startI = 6;
+        var startJ = 3;
+        var endI = 8;
+        var endJ = 5;
+      }
+
+      if (indexOfQuadrant >= 8){
+        var startI = 6;
+        var startJ = 6;
+        var endI = 8;
+        var endJ = 8;
+      }
+
+    for(let i=startI; i<=endI; startI++){
+      for (let j=startJ; j<=endJ; startJ++){
+        arrayQuadrant.push(matrix[startI][startJ]);
+      }
+    }
+
+    if (verifyLine(arrayQuadrant)){
+      return true;
+    }
+    else{
+      return false;
+    }
+  }
 
     function Container(props){
       return(
